Narrower title on mobile to avoid close button overlap

--- a/static/src/stylesheets/module/site-messages/_subscription-medium-banner.scss
+++ b/static/src/stylesheets/module/site-messages/_subscription-medium-banner.scss
@@ -40,7 +40,7 @@
     line-height: 22px;
     font-family: $f-serif-headline;
     font-weight: bold;
-    width: 100%;
+    width: 90%;
 
     @media (min-width: 350px) {
         font-size: 24px;
